--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
      text-align: center;
      border:2px solid #3498db;
      padding: 14px 40px;
-     color: white;
+     color: skyblue;
      border-radius: 24px;
      transition: 0.25s; 
      cursor: pointer ;
